--- a/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Views/QuanTriVien/Index.cshtml
+++ b/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Views/QuanTriVien/Index.cshtml
@@ -116,12 +116,12 @@
                         <img src="~/Content/HinhAnh/GiaoDien/iconSidebar/iconSideBar10.png" alt="icon Giảng viên" style="width: 60px; height: 60px; opacity: 0.5" />
                     </div>
                 </div>
-                <a href="/QuanTriVien/DanhSachPhongHoc" class="px-3 py-2 d-flex justify-content-center gap-1" style="text-align: center; background-color: #ffbe0b; opacity: 0.9; border-bottom-left-radius: 5px; border-bottom-right-radius: 5px; ">
+                <div class="px-3 py-2 d-flex justify-content-center gap-1" style="text-align: center; background-color: #ffbe0b; opacity: 0.9; border-bottom-left-radius: 5px; border-bottom-right-radius: 5px; ">
                     <span style="color: white; font-size: 15px;">Xem thêm</span>
                     <div class="d-flex justify-content-center align-items-center" style="width: 15px; height: 15px; background-color: white; border-radius: 999px;">
                         <img src="~/Content/HinhAnh/GiaoDien/right-arrow.png" alt="Alternate Text" style="width: 8px; height: 8px; opacity: 0.8" />
                     </div>
-                </a>
+                </div>
             </div>
         </div>
 
