--- a/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Views/Shared/_LayoutQuanTriVien.cshtml
+++ b/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Views/Shared/_LayoutQuanTriVien.cshtml
@@ -108,7 +108,7 @@
                                 </svg>
                                 <span style="color: black; font-size: 15px;">Danh sách phòng học</span>
                             </a>
-                            <a href="/QuanTriVien/ThemPhongHoc" style="display: block; margin-top: 15px;" class="nav__link">
+                            <a href="/QuanTriVien/KhoaHocPheDuyet" style="display: block; margin-top: 15px;" class="nav__link">
                                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="black" style="width: 15px; height: 15px;">
                                     <path stroke-linecap="round" stroke-linejoin="round" d="m16.49 12 3.75 3.75m0 0-3.75 3.75m3.75-3.75H3.74V4.499" />
                                 </svg>
@@ -134,13 +134,13 @@
                             </div>
                         </a>
                         <div id="subMenu4" class="subMenu" style="margin-left: 35px;">
-                            <a href="/QuanTriVien/DanhSachMaGiamGia" style="display: block; margin-top: 15px;" class="nav__link">
+                            <a href="/QuanTriVien/KhoaHoc" style="display: block; margin-top: 15px;" class="nav__link">
                                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="black" style="width: 15px; height: 15px;">
                                     <path stroke-linecap="round" stroke-linejoin="round" d="m16.49 12 3.75 3.75m0 0-3.75 3.75m3.75-3.75H3.74V4.499" />
                                 </svg>
                                 <span style="color: black; font-size: 15px;">Danh sách mã giảm giá</span>
                             </a>
-                            <a href="/QuanTriVien/ThemGiamGia" style="display: block; margin-top: 15px;" class="nav__link">
+                            <a href="/QuanTriVien/KhoaHocPheDuyet" style="display: block; margin-top: 15px;" class="nav__link">
                                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="black" style="width: 15px; height: 15px;">
                                     <path stroke-linecap="round" stroke-linejoin="round" d="m16.49 12 3.75 3.75m0 0-3.75 3.75m3.75-3.75H3.74V4.499" />
                                 </svg>
@@ -166,13 +166,13 @@
                             </div>
                         </a>
                         <div id="subMenu5" class="subMenu" style="margin-left: 35px;">
-                            <a href="/QuanTriVien/DanhSachTaiLieu" style="display: block; margin-top: 15px" class="nav__link">
+                            <a href="/QuanTriVien/QuanTriVien" style="display: block; margin-top: 15px" class="nav__link">
                                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="black" style="width: 15px; height: 15px;">
                                     <path stroke-linecap="round" stroke-linejoin="round" d="m16.49 12 3.75 3.75m0 0-3.75 3.75m3.75-3.75H3.74V4.499" />
                                 </svg>
                                 <span style="color: black; font-size: 15px;">Danh sách tài liệu</span>
                             </a>
-                            <a href="/QuanTriVien/ThemTaiLieu" style="display: block; margin-top: 15px;" class="nav__link">
+                            <a href="/QuanTriVien/GiangVien" style="display: block; margin-top: 15px;" class="nav__link">
                                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="black" style="width: 15px; height: 15px;">
                                     <path stroke-linecap="round" stroke-linejoin="round" d="m16.49 12 3.75 3.75m0 0-3.75 3.75m3.75-3.75H3.74V4.499" />
                                 </svg>
