--- a/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Views/QuanTriVien/DanhSachPhongHoc.cshtml
+++ b/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Views/QuanTriVien/DanhSachPhongHoc.cshtml
@@ -38,13 +38,22 @@
             <i class="fa-solid fa-angle-right"></i>
             <span>Danh sách phòng học</span>
         </div>
-            <h1 style="font-size: 22px; font-weight: 600; color: #000; margin-top: 20px;">Danh sách phòng học</h1>
-            <form method="get" action="/QuanTriVien/TimKiemPhongHoc" class="mt-3 input-group" style="width: 75%; position: relative;">
+        <div class="d-flex align-items-center justify-content-between mt-2">
+            <h1 style="font-size: 22px; font-weight: 600; color: #000;">Danh sách phòng học</h1>
+            <a href="/QuanTriVien/ThemQuanTriVien" class="btn btn-primary" style="margin-bottom: 10px; display: inline-block;">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" style="height: 15px; width: 15px;">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="M12 4.5v15m7.5-7.5h-15" />
+                </svg>
+                Thêm phòng học
+            </a>
+        </div>
+            <form method="get" action="/QuanTriVien/TimKiemPhongHoc" class="mt-2 input-group" style="width: 75%; position: relative;">
                 <input type="search" name="search" style="outline: none; width: 80%; padding: 8px; padding-left: 12px; border: 2px solid #0d6efd; border-top-left-radius: 5px; border-bottom-left-radius: 5px" placeholder="Tìm kiếm theo tên phòng...">
                 <button type="submit" class="btn btn-outline-secondary" style="padding: 8px 12px; background-color: #0d6efd; border-radius: 5px; border: 2px solid #0d6efd; border-top-left-radius: 0px; border-bottom-left-radius: 0px;" type="button">
                     <i style="color: white;" class="fa-solid fa-magnifying-glass"></i>
                 </button>
             </form>
+
         <div style="background-color: #fff; border-radius: 5px; width: 100%; margin-top: 20px; padding: 16px; border: 1px solid #dadada; border-radius: 5px;">
             <div style="display:flex; border-bottom: 1px solid #dadada">
                 <span class="col-md-2" style="text-align: center; padding: 10px 8px; color: #7f7f7f; font-weight: 500; ">Mã phòng</span>
@@ -117,17 +126,6 @@
                    @(Model.CurrentPage == Model.TotalPages ? "aria-disabled=\"true\"" : "")>
                     Sau
                 </a>
-            </div>
-
-            <div style="color: red;" class="mt-2">
-                <div>
-                    @if (TempData["ErrorMessagePhongHoc"] != null)
-                    {
-                        <div class="alert alert-danger">
-                            @TempData["ErrorMessagePhongHoc"]
-                        </div>
-                    }
-                </div>
             </div>
         </div>
     </div>
