--- a/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Views/QuanTriVien/ThemHocVien.cshtml
+++ b/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Views/QuanTriVien/ThemHocVien.cshtml
@@ -39,7 +39,7 @@
             <i class="fa-solid fa-angle-right"></i>
             <span style="color: #343a40">Danh sách học viên</span>
             <i class="fa-solid fa-angle-right"></i>
-            <span style="color: #000; ">Thêm học viên</span>
+            <span style="color: #000; ">Chi tiết</span>
         </div>
         <div class="d-flex justify-content-between">
             <h1 style="font-size: 22px; font-weight: 600; color: #000; margin-top: 20px; display: block">Thêm học viên</h1>
@@ -48,6 +48,13 @@
             <form class="myForm" action="/QuanTriVien/ThemHocVien" method="post">
                 <div style="width: 100%;" class="d-flex">
                     <div style="width: 60%;">
+                        <div class="d-flex justify-content-between gap-4">
+                            <div style="width: 100%">
+                                <label style="font-size: 15px; color: #374151; font-weight: 500;" for="MaQTV">Mã học viên: </label>
+                                @Html.TextBoxFor(model => model.NguoiDung.MaNguoiDung, new { @id = "MaQTV", @class = "form-control mt-2", placeholder = "Nhập mã học viên" })
+                                <span style="min-height: 20px; display: inline-block; color: red; font-size: 14px; margin-top: 5px;" class="errTenLoai"></span>
+                            </div>
+                        </div>
                         <div class="d-flex justify-content-between gap-4">
                             <div style="width: 100%">
                                 <label style="font-size: 15px; color: #374151; font-weight: 500;" for="TaiKhoan">Tài khoản: </label>
@@ -158,6 +165,7 @@
                     }
                 </div>
                 <div style="margin-top: 10px; width: 100%" class="d-flex justify-content-end gap-2">
+                    <button id="btnClearForm" type="button" class="btn btn-danger">Xóa</button>
                     <button id="btnLuu" type="submit" class="btn btn-success">Tạo</button>
                 </div>
             </form>
