--- a/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Views/QuanTriVien/ThemKhoaHoc.cshtml
+++ b/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Views/QuanTriVien/ThemKhoaHoc.cshtml
@@ -5,10 +5,6 @@
     Layout = "~/Views/Shared/_LayoutQuanTriVien.cshtml";
 }
 
-
-@{
-    NguoiDung user2 = Session["user"] as NguoiDung;
-}
 <div>
     <header style="position: sticky; left:0 ; top: 0; background-color: #fff; display: flex; align-items: center; justify-content: space-between; padding: 0px 16px; border-bottom: 1px solid #edede9; height: 80px;">
         <div style="display: flex; align-items: center; column-gap: 8px;">
@@ -46,9 +42,14 @@
         </div>
         <h1 style="font-size: 22px; font-weight: 600; color: #000; margin-top: 20px; display: block">Thêm khóa học</h1>
         <div style="background-color: #fff; border-radius: 5px; width: 100%; margin-top: 10px; padding: 16px; border: 1px solid #dadada; width: 100%;">
-            <form class="myForm" action="/QuanTriVien/ThemKhoaHoc" method="post">
+            <form class="myForm" action="/QuanTriVien/ChiTietKhoaHoc" method="post">
                 <div style="width: 100%;">
                     <div class="d-flex justify-content-between gap-4">
+                        <div style="width: 100%">
+                            <label style="font-size: 15px; color: #374151; font-weight: 500;" for="MaKhoaHoc">Mã khóa học: </label>
+                            @Html.TextBoxFor(model => model.MaKhoaHoc, new { @id = "MaKhoaHoc", @class = "form-control mt-2", placeholder = "Nhập mã khóa học" })
+                            <span style="min-height: 20px; display: inline-block; color: red; font-size: 14px; margin-top: 5px;" class="errTenLoai"></span>
+                        </div>
                         <div style="width: 100%">
                             <label style="font-size: 15px; color: #374151; font-weight: 500;" for="TenKhoaHoc">Tên khóa học: </label>
                             @Html.TextBoxFor(model => model.TenKhoaHoc, new { @id = "TenKhoaHoc", @class = "form-control mt-2", placeholder = "Nhập tên loại" })
@@ -70,7 +71,7 @@
                     <div class="d-flex justify-content-between gap-4">
                         <div style="width: 100%">
                             <label style="font-size: 15px; color: #374151; font-weight: 500;" for="NguoiTao">Người tạo: </label>
-                            <input type="text" name="NguoiTao" id="NguoiTao" value="@user2.MaNguoiDung" class="form-control mt-2" readonly />
+                            @Html.TextBoxFor(model => model.QuanTriVien.HoTen, new { @id = "NguoiTao", @class = "form-control mt-2", placeholder = "Nhập người tạo" })
                             <span style="min-height: 20px; display: inline-block; color: red; font-size: 14px; margin-top: 5px;" class="errMoTa"></span>
                         </div>
                         <div style="width: 100%">
@@ -79,25 +80,25 @@
                             <span style="min-height: 20px; display: inline-block; color: red; font-size: 14px; margin-top: 5px;" class="errMoTa"></span>
                         </div>
                     </div>
+                    <div style="width: 100%">
+                        <label style="font-size: 15px; color: #374151; font-weight: 500;" for="inputStatus">Trạng thái:</label>
+                        <select disabled id="TrangThai" name="TrangThai" class="form-control mt-2">
+                            <option value="Đang hoạt động" @(Model.TrangThai == "Đang hoạt động" ? "selected" : "")>Đang hoạt động</option>
+                            <option value="Đã khóa" @(Model.TrangThai == "Đã khóa" ? "selected" : "")>Đã khóa</option>
+                        </select>
+                    </div>
                     <div class="mt-3 d-flex justify-content-center flex-column">
                         <span style="font-size: 15px; color: #374151; font-weight: 500; display: block; margin-top: 10px; margin-bottom: 5px;">Ảnh bìa khóa học</span>
                         <img id="avatarPreview" src="~/Content/HinhAnh/KhoaHoc/khoahoc_default.jpg" alt="avatar preview" style="width: 450px; object-fit: cover; height: 250px;" />
                         @Html.TextBoxFor(model => model.AnhBia, new { @id = "Avatar", @value = @Model.AnhBia, @class = "mt-2", @style = "display: none;", @type = "file", @accept = "image/*" })
-                        <label for="Avatar" id="label" class="custom-file-upload mt-2" style="width: 150px; text-align: center; padding: 10px 12px; background-color: #0077b6; color: white; border-radius: 5px;">
+                        <label for="Avatar" id="label" class="custom-file-upload mt-2" style="pointer-events: none;cursor: not-allowed; width: 150px; text-align: center; padding: 10px 12px; background-color: #0077b6; color: white; border-radius: 5px;">
                             Chọn tập tin
                         </label>
                         <span style="min-height: 20px; display: inline-block; color: red; font-size: 14px; margin-top: 5px;" class="errAvatar"></span>
                     </div>
                 </div>
-                <div>
-                    @if (TempData["ErrorMessage"] != null)
-                    {
-                        <div class="alert alert-danger">
-                            @TempData["ErrorMessage"]
-                        </div>
-                    }
-                </div>
                 <div style="margin-top: 10px; width: 100%" class="d-flex justify-content-end gap-2">
+                    <button id="btnClearForm" type="button" class="btn btn-danger">Xóa</button>
                     <button id="btnLuu" type="submit" class="btn btn-success">Tạo</button>
                 </div>
             </form>
