--- a/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Views/QuanTriVien/ChiTietLopHoc.cshtml
+++ b/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Views/QuanTriVien/ChiTietLopHoc.cshtml
@@ -6,7 +6,7 @@
 }
 
 <div>
-    <header style="position: sticky; left:0 ; top: 0; background-color: #fff; display: flex; align-items: center; justify-content: space-between; padding: 0px 16px; border-bottom: 1px solid #edede9; height: 80px;">
+    <header style="position: sticky; left:0 ; top: 0; z-index: 10; background-color: #fff; display: flex; align-items: center; justify-content: space-between; padding: 0px 16px; border-bottom: 1px solid #edede9; height: 80px;">
         <div style="display: flex; align-items: center; column-gap: 8px;">
             <i class="fa-solid fa-bars" style="color: black; font-size: 20px;"></i>
             <h2 style="font-size: 18px; color: #000; font-weight: 500;">Quản lý Trung tâm Anh ngữ Yola</h2>
