--- a/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Views/QuanTriVien/ThemKhoaHoc_GiamGia.cshtml
+++ b/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Views/QuanTriVien/ThemKhoaHoc_GiamGia.cshtml
@@ -46,7 +46,7 @@
                 <div style="width: 100%;">
                     <div class="d-flex justify-content-between gap-4">
                         <div style="width: 100%">
-                            <label style="font-size: 15px; color: #374151; font-weight: 500;" for="MaTaiLieu">Mã giảm giá: </label>
+                            <label style="font-size: 15px; color: #374151; font-weight: 500;" for="MaTaiLieu">Tên giảm giá: </label>
                             <input type="text" name="MaGiamGia" readonly value="@ViewBag.MaGiamGia" class="form-control mt-2" />
                         </div>
                         <div style="width: 100%">
