--- a/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Views/QuanTriVien/ThemKhoaHoc_TaiLieu.cshtml
+++ b/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Views/QuanTriVien/ThemKhoaHoc_TaiLieu.cshtml
@@ -46,11 +46,11 @@
                 <div style="width: 100%;">
                     <div class="d-flex justify-content-between gap-4">
                         <div style="width: 100%">
-                            <label style="font-size: 15px; color: #374151; font-weight: 500;" for="MaTaiLieu">Mã tài liệu: </label>
+                            <label style="font-size: 15px; color: #374151; font-weight: 500;" for="MaTaiLieu">Tên tài liệu: </label>
                             <input type="text" name="MaTaiLieu" readonly value="@ViewBag.MaTaiLieu" class="form-control mt-2" />
                         </div>
                         <div style="width: 100%">
-                            <label style="font-size: 15px; color: #374151; font-weight: 500;" for="MaKhoaHoc">Mã khóa học: </label>
+                            <label style="font-size: 15px; color: #374151; font-weight: 500;" for="MaKhoaHoc">Tên khóa học: </label>
                             @Html.TextBoxFor(model => model.MaKhoaHoc, new { @id = "MaKhoaHoc", @class = "form-control mt-2", placeholder = "Nhập mã khóa học" })
                         </div>
                     </div>                   
