--- a/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Views/QuanTriVien/DanhSachLopHoc.cshtml
+++ b/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Views/QuanTriVien/DanhSachLopHoc.cshtml
@@ -37,11 +37,21 @@
             <i class="fa-solid fa-angle-right"></i>
             <span style="color: #343a40">Danh sách lớp học</span>
         </div>
-        <div class="d-flex justify-content-between" style="margin-top: 20px;">
+        <div class="d-flex justify-content-between align-items-center" style="margin-top: 20px;">
             <h1 style="font-size: 22px; font-weight: 600; color: #000; ">Danh sách lớp học của khóa học</h1>
-            <a href="/QuanTriVien/ThemLopHoc" class="btn btn-primary" style="font-size: 16px;">
-                Thêm lớp học
-            </a>
+            @if (ViewBag.TrangThaiTamNgung != null)
+            {
+                <span style="color:red;">@ViewBag.TrangThaiTamNgung</span>
+                 <a  href="/QuanTriVien/ThemLopHoc?makh=@ViewBag.MaKhoaHoc" class=" btn btn-primary" style="font-size: 16px; pointer-events: none;">
+                    Thêm lớp học
+                </a>   
+            }
+            else
+            {
+                <a href="/QuanTriVien/ThemLopHoc?makh=@ViewBag.MaKhoaHoc" class="btn btn-primary" style="font-size: 16px;">
+                    Thêm lớp học
+                </a>                
+            }
         </div>
         <div style="background-color: #fff; border-radius: 5px; width: 100%; margin-top: 10px; padding: 16px; border: 1px solid #dadada; width: 100%;">
             <div class="row g-4">
@@ -60,9 +70,26 @@
                                 </span>
                             </span>
                             <div class="d-flex justify-content-end">
+                                <a href="/QuanTriVien/XoaLopHoc?malop=@item.MaLop&makh=@item.KhoaHoc.MaKhoaHoc" class="btn btn-danger me-2">Xóa</a>
                                 <a href="/QuanTriVien/ChiTietLopHoc?malop=@item.MaLop" class="btn btn-primary">Chi tiết</a>
                             </div>
                         </div>
+                    </div>
+                }
+            </div>
+        </div>
+        <div style="color: red;" class="mt-2">
+            <div>
+                @if (TempData["ErrorMessage"] != null)
+                {
+                    <div class="alert alert-danger">
+                        @TempData["ErrorMessage"]
+                    </div>
+                }
+                @if (TempData["SuccessMessage"] != null)
+                {
+                    <div class="alert alert-success">
+                        @TempData["SuccessMessage"]
                     </div>
                 }
             </div>
